UI Restructuring - Overflow issues

--- a/src/components/Auth/index.module.scss
+++ b/src/components/Auth/index.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 90%;
+  height: calc(100vh - 160px);
   align-items: center;
   max-width: 540px;
   margin: 0 auto;
